--- a/css/rules.css
+++ b/css/rules.css
@@ -144,6 +144,14 @@ h1{
   margin-bottom: 1.5%;
 }
 
+.logo {
+  /* float: left; */
+  top: 15px;
+  left: 15px;
+  width: 80px;
+  position: absolute;
+}
+
 @media only screen and (max-width: 767px) {
   body{
     background-size: 460%;
