--- a/css/rules.css
+++ b/css/rules.css
@@ -154,7 +154,8 @@ h1{
 
 @media only screen and (max-width: 767px) {
   body{
-    background-size: 460%;
+    background-size: 860%;
+    width: 80%;
   }
   .navbar-brand {
     margin: 15px 15px;
